fix alignment

--- a/frontend/src/components/header.module.scss
+++ b/frontend/src/components/header.module.scss
@@ -12,7 +12,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: self-end;
+    align-items: baseline;
 
     color: $primaryColor;
     transition: 0.25s;
